# ZenvaCourses

./: .gitignore
CrewAI/assistant_agents/: README.md  pyproject.toml  report.md
CrewAI/assistant_agents/src/assistant_agents/: crew.py  main.py
CrewAI/assistant_agents/src/assistant_agents/config/: agents.yaml  tasks.yaml
CrewAI/my_project/: .gitignore  pyproject.toml  report.md
CrewAI/study_buddy/buddy_ai/: README.md  pyproject.toml
CrewAI/study_buddy/buddy_ai/knowledge/: user_preference.txt
CrewAI/study_buddy/buddy_ai/output/: summary.md
CrewAI/study_buddy/buddy_ai/src/buddy_ai/: crew.py  main.py
CrewAI/study_buddy/buddy_ai/src/buddy_ai/config/: agents.yaml  tasks.yaml
DataStructures/: Lists.ipynb
Flight_Data_Analysis/: filtering.py  flight_data_filtering.ipynb  flights.csv:Zone.Identifier  grouping_and_aggregating.ipynb  grouping_and_aggregating.py  main.py
PyTurtle/: PyTurtle.ipynb
