[project]
name = "assistant_agents"
version = "0.1.0"
description = "assistant_agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
assistant_agents = "assistant_agents.main:run"
run_crew = "assistant_agents.main:run"
train = "assistant_agents.main:train"
replay = "assistant_agents.main:replay"
test = "assistant_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
